--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,8 @@
-Hello World
+<div class=container>
+  <div class="page-header">
+    <h1>CRM</h1>
+  </div>
+  <div>
+    <%=image_tag("admin.png", class: "img-responsive")%>
+  </div>
+</div>
