moved header to layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,32 @@
     <% end %>
   </div>
 
+  <div class=container>
+  <br />
   <body class= 'body'>
+    <div class=row>
+      <div class="col-md-3">
+        <div class="well">
+            <h3>Leads</h3>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="well">
+            <h3>Opportunities</h3>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="well">
+            <h3>Merchants</h3>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="well">
+            <h3>Tasks</h3>
+        </div>
+      </div>
       <%= yield %>
+    </div>  
   </body>
 
   <footer class= 'container'>
