--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
 
   <div class="jumbotron">
-      <p><h1>gCamp</h1></p>
-      <p>Your life, organized</p>
+      <p><h1>CRM</h1></p>
+      <p>Get organized, man</p>
   </div>
 
-    <div class=row >
+    <div class=row>
       <div class="col-md-4">
         <%=image_tag("tablet_guy.jpg", class: "img-responsive")%>
       </div>
@@ -28,29 +28,28 @@
             <h3 class="panel-title">Tasks</h3>
           </div>
           <div class="panel-body">
-            Grouped by projects and lists. Just the way you like'em
+            Just the way you like'em
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title">Permissions</h3>
+            <h3 class="panel-title">Merchants</h3>
           </div>
           <div class="panel-body">
-            Fine-grained permissions
+            Know who you're talking to
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title">Comments</h3>
+            <h3 class="panel-title">Interaction History</h3>
           </div>
           <div class="panel-body">
             <ul>
-              <li>Comment on tasks and documents</li>
-              <li>Get email notifications</li>
+              It's all in the details
             </ul>
           </div>
         </div>
