--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,16 +12,7 @@
     <dd><%= @user.first_name %></dd>
     <dt>Last Name</dt>
     <dd><%= @user.last_name %></dd>
-    <% if current_user == @user || current_user.admin || current_user.project_member_of(@user) %>
-      <dt>Email</dt>
-      <dd><%= mail_to @user.email %></dd>
-    <% end %>
-    <dt>Pivotal Tracker Token</dt>
-    <% if @user.pivotal_tracker_token %>
-      <dd><%= "#{@user.pivotal_tracker_token.to_s.slice!(0..3)}*************************" %></dd>
-    <% else %>
-      <dd></dd>
-    <% end %>
+    <dt>Email</dt>
+    <dd><%= @user.email %></dd>
   </dl>
-
 </div>
